archive/2022.07.bxl-k3s-pi/apps/media-server/radarr/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media-server
  labels:
    app: radarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 0
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /config/config.xml
          subPath: config.xml
          readOnly: true
        # - name: movies
        #   mountPath: /movies
        #   subPath: movies
        #   readOnly: false
        # - name: movies
        #   mountPath: /downloads
        #   subPath: tmp
      volumes:
      - name: config
        secret:
          secretName: radarr
      # - name: movies
      #   nfs:
      #     server: truenas.bhasher.com
      #     path: /mnt/Main/local/movies

---

apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media-server
  annotations:
    cert-manager.io/cluster-issuer: "bhasherca-k3s-issuer"
    cert-manager.io/common-name: "radarr.bhasher.com"
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-signin: https://idp.bhasher.com
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method request_method;
    nginx.ingress.kubernetes.io/auth-url: https://idp.bhasher.com/api/verify
    nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header X-Forwarded-Method request_method;
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - radarr.bhasher.com
    secretName: radarr-tls
  rules:
  - host: radarr.bhasher.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
